# slrno

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  adaptive_research.py  backtesting.py  bar_patterns.py  broker_preview.py  calendar_diagnostics.py  capital.py  config.py  crypto.py  edge_discovery.py  evidence_export.py  fmp_cache.py  fmp_proxy_fallbacks.py  ig_costs.py  ig_spread_bet_engines.py  main.py  market_context.py  market_data_cache.py  market_discovery.py  market_plugins.py  market_registry.py  payload_compaction.py  promotion_readiness.py  research_critic.py  research_lab.py  research_labels.py  research_metrics.py  research_store.py  research_strategies.py  risk.py  settings_store.py  share_spread_betting.py
backend/configs/: edge_discovery.yaml
backend/tests/: test_adaptive_backtesting.py  test_backtesting.py  test_bar_patterns.py  test_broker_preview.py  test_calendar_diagnostics.py  test_capital.py  test_daily_template_scanner.py  test_day_trading_factory.py  test_edge_discovery.py  test_eodhd_cache.py  test_evidence_export.py  test_fmp_cache.py  test_fmp_proxy_fallbacks.py  test_fmp_settings.py  test_ig_costs.py  test_ig_spread_bet_engines.py  test_market_context.py  test_market_discovery.py  test_market_plugins.py  test_market_registry.py  test_payload_compaction.py  test_promotion_readiness.py  test_research_critic.py  test_research_lab.py  test_research_metrics.py  test_research_run_resilience.py  test_research_store.py  test_risk.py  test_settings_store.py  (+1 more)
(+13 files in other folders)
