[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slrno-backend"
version = "0.1.0"
description = "Server-deployable trading bot backend for EODHD data, IG demo connectivity, paper execution, and backtesting."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "optuna>=3.6.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
  "scikit-learn>=1.4.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
